# InspectorWidgetCollector

./: .gitmodules  CMakeLists.txt  README.md
CI/install/osx/: build_app.py
UI/: CMakeLists.txt  obs-app.cpp  obs-app.hpp  obs.rc  platform-osx.mm  platform-windows.cpp  platform-x11.cpp  platform.hpp  window-basic-main-outputs.cpp  window-basic-main-profiles.cpp  window-basic-main-scene-collections.cpp  window-basic-main.cpp  window-basic-main.hpp  window-basic-settings.cpp
UI/forms/: OBSBasic.ui  OBSBasicSettings.ui  obs.qrc
UI/forms/images/: InspectorWidgetCollector.ep
UI/installer/: mp-installer.nsi
cmake/Modules/: ObsCpack.cmake
cmake/osxbundle/: Info.plist  obslaunch.sh
libobs/: obs-source.c  obs-source.h  obs.c  obs.h
libobs-opengl/: gl-subsystem.c
obs/: CMakeLists.txt  obs-app.cpp  window-basic-main-outputs.cpp  window-basic-main.cpp
plugins/: CMakeLists.txt
plugins/input-accessibility/: CMakeLists.txt  input-accessibility.c  platform-osx.m
plugins/input-accessibility/data/locale/: en-US.ini  fr-FR.ini
plugins/input-uiohook/: CMakeLists.txt  input-uiohook.c  libuiohook-async-logger.c  libuiohook-async-logger.h
plugins/obs-ffmpeg/: obs-ffmpeg-output.c
